finishing up the html.

--- a/index.html
+++ b/index.html
@@ -9,19 +9,148 @@
 
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/boilerplate.css">
+        <link rel="stylesheet" href="css/960_12_col.css">
+        <link href="https://fonts.googleapis.com/css?family=Eczar" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
         <link rel="stylesheet" href="css/main.css">
 
 
     </head>
     <body>
 
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <section id="header">
+          <div class="header-background">
+            <div class="header-container container_12">
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <script src="js/main.js"></script>        
+              <div class="logo-container">
+                <img src="img/logo.png" alt="Floral Manifesto" />
+              </div>
+
+              <div class="slogan-container">
+                <img src="img/feminism_fashion_floral.png" alt="Feminism. Fashion. Floral." />
+              </div>
+
+              <div class="stitch-divider-header">
+                <img src="img/cross_stitch_corroded.png" alt="" />
+              </div>
+
+              <div class="header-nav">
+                <ul>
+                  <li><a href="#">About</a></li>
+                  <li><img class="stitch-star" src="img/cross_stitch_star.png" alt="x" /></li>
+                  <a href="#"><li>CV/Press</li></a>
+                  <li><img class="stitch-star" src="img/cross_stitch_star.png" alt="x" /></li>
+                  <a href="#"><li>Contact</li></a>
+                </ul>
+              </div>
+
+              <div class="stitch-divider-header">
+                <img src="img/cross_stitch_corroded.png" alt="" />
+              </div>
+
+            </div>
+          </div>
+        </section>
+
+        <section id="articles">
+          <div class="articles-background">
+            <div class="articles-container container_12">
+
+              <div class="heading-stitch-divider grid_12">
+                <div class="stitch-heading">
+                  <img src="img/articles.png" alt="ARTICLES" />
+                </div>
+              </div>
+
+              <div id="main_article" class="article grid_8">
+
+              </div>
+
+              <div class="article grid_4">
+
+              </div>
+
+              <div class="article grid_4">
+
+              </div>
+
+              <div class="article grid_4">
+
+              </div>
+
+              <div class="article grid_4">
+
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section id="sub-articles">
+          <div class="sub-articles-background">
+            <div class="sub-articles-container container_12">
+
+              <div class="stitch-divider grid_12">
+                <img src="img/blank_header.png" alt="" />
+              </div>
+
+              <div id="boss-ladies" class="sub-article grid_6">
+                <div class="sub-article-header">
+                  <img src="img/boss_ladies.png" alt="Boss Ladies" />
+                </div>
+              </div>
+
+              <div id="reading-list" class="sub-article grid_6">
+                <div class="sub-article-header">
+                  <img src="img/reading_list.png" alt="Reading List" />
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </section>
+
+        <section id="video">
+          <div class="video-background">
+            <div class="video-container container_12">
+
+              <div class="stitch-divider grid_12">
+                <img src="img/video_header.png" alt="VIDEO" />
+              </div>
+
+
+              <div class="player-container grid_8">
+
+              </div>
+
+              <div class="video-info-container grid_4">
+
+                <img class="small-stitch" src="img/cross_stitch_line.png" alt="" />
+                <img src="img/raconteurs-logo.png" alt="" />
+                <img src="img/bodies.png" alt="BODIES" />
+
+                <p>
+                  See more videos<br>at Raconteur Storytelling
+                </p>
+
+                <img class="small-stitch" src="img/cross_stitch_line.png" alt="" />
+
+              </div>
+
+
+            </div>
+
+          </div>
+        </section>
+
+
+
+        <footer>
+          <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+          <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+          <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+          <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+          <script src="js/main.js"></script>
+        </footer>
 
     </body>
 </html>
