added some assest. changed a stitched divider.

--- a/index.html
+++ b/index.html
@@ -113,11 +113,13 @@
           <div class="video-background">
             <div class="video-container container_12">
 
-              <div class="stitch-divider grid_12">
-                <img src="img/video_header.png" alt="VIDEO" />
+              <div class="heading-stitch-divider grid_12">
+                <div class="stitch-heading">
+                  <img src="img/video.png" alt="ARTICLES" />
+                </div>
               </div>
 
-
+              
               <div class="player-container grid_8">
 
               </div>
