installed the instagram feed.

--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
 
               <div class="heading-stitch-divider grid_12">
                 <div class="stitch-heading">
-                  <img src="img/video.png" alt="ARTICLES" />
+                  <img src="img/video.png" alt="Video" />
                 </div>
               </div>
 
-              
+
               <div class="player-container grid_8">
 
               </div>
@@ -137,13 +137,27 @@
                 <img class="small-stitch" src="img/cross_stitch_line.png" alt="" />
 
               </div>
+            </div>
+          </div>
+        </section>
 
+        <section id="instagram">
+          <div class="instagram-background">
+            <div class="instagram-container container_12">
 
+              <div class="heading-stitch-divider grid_12">
+                <div class="stitch-heading">
+                  <img src="img/instagram.png" alt="Instagram" />
+                </div>
+              </div>
+
+              <div class="instagram-module grid_12">
+                <!-- LightWidget WIDGET --><script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/dc52ea18245e5c8f948fea01c8c9c61d.html" id="lightwidget_dc52ea1824" name="lightwidget_dc52ea1824"  scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
+              </div>
             </div>
 
           </div>
         </section>
-
 
 
         <footer>
