--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               </div>
 
               <div class="slogan-container">
-                <img src="img/feminism_fashion_floral.png" alt="Feminism. Fashion. Floral." />
+                <img src="img/fff.png" alt="Feminism. Fashion. Floral." />
               </div>
 
               <div class="stitch-divider-header">
@@ -121,7 +121,7 @@
 
 
               <div class="player-container grid_8">
-
+                <iframe width="640" height="360" src="https://www.youtube.com/embed/amBBO4PqJKo?controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
               </div>
 
               <div class="video-info-container grid_4">
@@ -156,6 +156,30 @@
               </div>
             </div>
 
+          </div>
+        </section>
+
+        <section id="site-footer">
+          <div class="footer-background">
+            <div class="footer-container container_12">
+              <div class="footer-logo-container grid_12">
+                <div class="footer-banner">
+                  <img src="img/cross_stitch_line.png" alt="" />
+                  <img src="img/cross_stitch_star.png" alt="" />
+                  <img src="img/cross_stitch_line.png" alt="" />
+                </div>
+
+                <div class="footer-slogan">
+                  <img src="img/feminism_fashion_floral.png" alt="" />
+                </div>
+
+                <div class="footer-disclaimer">
+                  <img src="img/all_rights_reserved.png" alt="Floral Manifesto 2016 All Rights Reserved" />
+                </div>
+
+
+              </div>
+            </div>
           </div>
         </section>
 
