centered the video info box and made both boxes a static 360px height.

--- a/index.html
+++ b/index.html
@@ -126,15 +126,17 @@
 
               <div class="video-info-container grid_4">
 
-                <img class="small-stitch" src="img/cross_stitch_line.png" alt="" />
-                <img src="img/raconteurs-logo.png" alt="" />
-                <img src="img/bodies.png" alt="BODIES" />
+                <div class="">
+                  <img class="small-stitch" src="img/cross_stitch_line.png" alt="" />
+                  <img src="img/raconteurs-logo.png" alt="" />
+                  <img src="img/bodies.png" alt="BODIES" />
 
-                <p>
-                  See more videos<br>at Raconteur Storytelling
-                </p>
+                  <p>
+                    See more videos<br>at Raconteur Storytelling
+                  </p>
 
-                <img class="small-stitch" src="img/cross_stitch_line.png" alt="" />
+                  <img class="small-stitch" src="img/cross_stitch_line.png" alt="" />
+                </div>
 
               </div>
             </div>
