finishing touches to html before installing the wordpress API.

--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
 
 
               <div class="player-container grid_8">
-                <iframe width="640" height="360" src="https://www.youtube.com/embed/amBBO4PqJKo?controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+                <!-- YOUTUBE EMBEDED CODE -->
+                <iframe width="640" height="360" src="https://www.youtube.com/embed/WAu-vTt7kw4?controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
               </div>
 
               <div class="video-info-container grid_4">
