--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="css/960_12_col.css">
         <link href="https://fonts.googleapis.com/css?family=Eczar" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+        <link rel="stylesheet" href="css/blog_posts.css">
         <link rel="stylesheet" href="css/main.css">
 
 
@@ -62,23 +63,32 @@
                 </div>
               </div>
 
-              <div id="main_article" class="article grid_8">
+              <div id="latest-post" class="article grid_8">
+
+
+                  <div class="post-header-container">
+                    <h1 class="post-title post-header"></h1>
+                  </div>
+
+                  <div class="post-header-container">
+                    <h3 class="post-date post-header"></h3>
+                  </div>
 
               </div>
 
-              <div class="article grid_4">
+              <div class="sub-post article grid_4">
 
               </div>
 
-              <div class="article grid_4">
+              <div class="sub-post article grid_4">
 
               </div>
 
-              <div class="article grid_4">
+              <div class="sub-post article grid_4">
 
               </div>
 
-              <div class="article grid_4">
+              <div class="sub-post article grid_4">
 
               </div>
             </div>
@@ -192,6 +202,7 @@
           <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
           <script src="js/vendor/modernizr-2.8.3.min.js"></script>
           <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+          <script type="text/javascript" src="js/wordpress_api_calls.js"></script>
           <script src="js/main.js"></script>
         </footer>
 
