added code whoch iterates through an array of html ID's and adds the appropriate content from the wordpress blogs to each container.  Need to tweak the headings for each container.

--- a/index.html
+++ b/index.html
@@ -79,19 +79,19 @@
 
               </div>
 
-              <div class="sub-post article grid_4">
+              <div id="post1" class="sub-post article grid_4">
 
               </div>
 
-              <div class="sub-post article grid_4">
+              <div id="post2" class="sub-post article grid_4">
 
               </div>
 
-              <div class="sub-post article grid_4">
+              <div id="post3" class="sub-post article grid_4">
 
               </div>
 
-              <div class="sub-post article grid_4">
+              <div id="post4" class="sub-post article grid_4">
 
               </div>
             </div>
