finished the bulk of the work implementing worspress posts into html.  Still need to finish case specific code for css.

--- a/index.html
+++ b/index.html
@@ -67,13 +67,15 @@
               </div>
 
               <div id="latest-post" class="article grid_8">
+                  <div class="post-image-shell">
 
+                  </div>
 
-                  <div class="post-header-container">
+                  <div class="latest-post-header-container">
                     <h1 class="post-title post-header"></h1>
                   </div>
 
-                  <div class="post-header-container">
+                  <div class="latest-post-header-container">
                     <h3 class="post-date post-header"></h3>
                   </div>
 
@@ -81,17 +83,61 @@
 
               <div id="post1" class="sub-post article grid_4">
 
+                <div class="post-image-shell">
+
+                </div>
+
+                <div class="sub-post-header-container">
+                  <div class="sub-post-header-shell">
+                    <h1 class="post-title sub-post-header"></h1>
+                    <h3 class="post-date sub-post-date-header"></h3>
+                  </div>
+                </div>
+
               </div>
 
               <div id="post2" class="sub-post article grid_4">
+
+                <div class="post-image-shell">
+
+                </div>
+
+                <div class="sub-post-header-container">
+                  <div class="sub-post-header-shell">
+                    <h1 class="post-title sub-post-header"></h1>
+                    <h3 class="post-date sub-post-date-header"></h3>
+                  </div>
+                </div>
 
               </div>
 
               <div id="post3" class="sub-post article grid_4">
 
+                <div class="post-image-shell">
+
+                </div>
+
+                <div class="sub-post-header-container">
+                  <div class="sub-post-header-shell">
+                    <h1 class="post-title sub-post-header"></h1>
+                    <h3 class="post-date sub-post-date-header"></h3>
+                  </div>
+                </div>
+
               </div>
 
               <div id="post4" class="sub-post article grid_4">
+
+                <div class="post-image-shell">
+
+                </div>
+
+                <div class="sub-post-header-container">
+                  <div class="sub-post-header-shell">
+                    <h1 class="post-title sub-post-header"></h1>
+                    <h3 class="post-date sub-post-date-header"></h3>
+                  </div>
+                </div>
 
               </div>
             </div>
