added css zoom-effect to sub-articles heading image.

--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
 
 
 
+        <!-- SUB-ARTICLES -->
 
         <section id="sub-articles">
           <div class="sub-articles-background">
@@ -171,6 +172,11 @@
             </div>
           </div>
         </section>
+
+
+
+
+
 
         <section id="video">
           <div class="video-background">
