created animations for the blog posts, the sub-articles, and the video container.  Linked video container to corrosponding website.

--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
         <link rel="stylesheet" href="css/blog_posts.css">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/animations.css">
 
 
     </head>
     <body>
 
+
+      <!-- ******* HEADER ******** -->
+      <!-- ********************** -->
         <section id="header">
           <div class="header-background">
             <div class="header-container container_12">
@@ -39,9 +43,9 @@
                 <ul>
                   <li><a href="#">About</a></li>
                   <li><img class="stitch-star" src="img/cross_stitch_star.png" alt="x" /></li>
-                  <a href="#"><li>CV/Press</li></a>
+                  <li><a href="#">CV/Press</a></li>
                   <li><img class="stitch-star" src="img/cross_stitch_star.png" alt="x" /></li>
-                  <a href="#"><li>Contact</li></a>
+                  <li><a href="#">Contact</a></li>
                 </ul>
               </div>
 
@@ -55,6 +59,9 @@
 
 
 
+
+        <!-- ******* ARTICLES ******** -->
+        <!-- ********************** -->
 
         <section id="articles">
           <div class="articles-background">
@@ -147,7 +154,8 @@
 
 
 
-        <!-- SUB-ARTICLES -->
+        <!-- ******* SUB-ARTICLES ******** -->
+        <!-- ********************** -->
 
         <section id="sub-articles">
           <div class="sub-articles-background">
@@ -177,6 +185,8 @@
 
 
 
+        <!-- ******* VIDEO ******** -->
+        <!-- ********************** -->
 
         <section id="video">
           <div class="video-background">
@@ -196,13 +206,13 @@
 
               <div class="video-info-container grid_4">
 
-                <div class="">
+                <div class="centering-div">
                   <img class="small-stitch" src="img/cross_stitch_line.png" alt="" />
-                  <img src="img/raconteurs-logo.png" alt="" />
+                  <a href="http://raconteurs.ca/"><img class="raconteurs-logo" src="img/raconteurs-logo.png" alt="" /></a>
                   <img src="img/bodies.png" alt="BODIES" />
 
                   <p>
-                    See more videos<br>at Raconteur Storytelling
+                    See more videos<br>at <a href="http://raconteurs.ca/">Raconteur Storytelling</a>
                   </p>
 
                   <img class="small-stitch" src="img/cross_stitch_line.png" alt="" />
