installed bootstrap library.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/boilerplate.css">
-        <link rel="stylesheet" href="css/960_12_col.css">
+        <!-- <link rel="stylesheet" href="css/960_12_col.css"> -->
+        <link rel="stylesheet" href="libraries/bootstrap-3.3.7/css/boostrap.min.css">
+
         <link href="https://fonts.googleapis.com/css?family=Eczar" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
         <link rel="stylesheet" href="css/blog_posts.css">
@@ -287,6 +289,8 @@
           <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
           <script src="js/vendor/modernizr-2.8.3.min.js"></script>
           <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+          <script type="text/javascript" src="libraries/bootstrap-3.3.7/js/bootstrap.min.js"></script>
+
           <script type="text/javascript" src="js/wordpress_api_calls.js"></script>
           <script src="js/main.js"></script>
         </footer>
