made the header responsive.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/boilerplate.css">
         <!-- <link rel="stylesheet" href="css/960_12_col.css"> -->
-        <link rel="stylesheet" href="libraries/bootstrap-3.3.7/css/boostrap.min.css">
+        <link rel="stylesheet" href="libraries/bootstrap-3.3.7/css/bootstrap.min.css">
 
         <link href="https://fonts.googleapis.com/css?family=Eczar" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
@@ -27,32 +27,36 @@
       <!-- ********************** -->
         <section id="header">
           <div class="header-background">
-            <div class="header-container container_12">
+            <div class="header-container container">
 
-              <div class="logo-container">
-                <img src="img/logo.png" alt="Floral Manifesto" />
-              </div>
+              <div class="row">
 
-              <div class="slogan-container">
-                <img src="img/fff.png" alt="Feminism. Fashion. Floral." />
-              </div>
+                <div class="logo-container col-xs-12 col-md-8 col-md-offset-2">
+                  <img src="img/logo.png" alt="Floral Manifesto" />
+                </div>
 
-              <div class="stitch-divider-header">
-                <img src="img/cross_stitch_corroded.png" alt="" />
-              </div>
+                <div class="slogan-container col-xs-8 col-xs-offset-2 col-md-6 col-md-offset-3">
+                  <img src="img/fff.png" alt="Feminism. Fashion. Floral." />
+                </div>
 
-              <div class="header-nav">
-                <ul>
-                  <li><a href="#">About</a></li>
-                  <li><img class="stitch-star" src="img/cross_stitch_star.png" alt="x" /></li>
-                  <li><a href="#">CV/Press</a></li>
-                  <li><img class="stitch-star" src="img/cross_stitch_star.png" alt="x" /></li>
-                  <li><a href="#">Contact</a></li>
-                </ul>
-              </div>
+                <div class="stitch-divider-header col-xs-12 col-md-8 col-md-offset-2">
+                  <img src="img/cross_stitch_corroded.png" alt="" />
+                </div>
 
-              <div class="stitch-divider-header">
-                <img src="img/cross_stitch_corroded.png" alt="" />
+                <div class="header-nav col-xs-12 col-md-8 col-md-offset-2">
+                  <ul>
+                    <li><a href="#">About</a></li>
+                    <li><img class="stitch-star" src="img/cross_stitch_star.png" alt="x" /></li>
+                    <li><a href="#">CV/Press</a></li>
+                    <li><img class="stitch-star" src="img/cross_stitch_star.png" alt="x" /></li>
+                    <li><a href="#">Contact</a></li>
+                  </ul>
+                </div>
+
+                <div class="stitch-divider-header col-xs-12 col-md-8 col-md-offset-2">
+                  <img src="img/cross_stitch_corroded.png" alt="" />
+                </div>
+
               </div>
 
             </div>
