made the sub-post section responsive and added a responsive.css file which holds all the bootstrap breakpoints.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <link rel="stylesheet" href="css/blog_posts.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/animations.css">
+        <link rel="stylesheet" href="css/responsive.css">
 
 
     </head>
@@ -105,7 +106,7 @@
                 </div>
 
 
-                <div class="article col-xs-12 col-md-4">
+                <div class="article col-xs-12 col-sm-6 col-md-4">
 
                   <div id="post1" class="article-preview-container">
                     <!-- the background image conatiner-->
@@ -125,7 +126,7 @@
                 </div>
 
 
-                <div class="sub-post article col-xs-12 col-md-4">
+                <div class="sub-post article col-xs-12 col-sm-6 col-md-4">
 
                   <div id="post2" class="article-preview-container">
                     <!-- the background image conatiner-->
@@ -145,7 +146,7 @@
                 </div>
 
 
-                <div class="sub-post article col-xs-12 col-md-4">
+                <div class="sub-post article col-xs-12 col-sm-6 col-md-4">
 
                   <div id="post3" class="article-preview-container">
                     <!-- the background image conatiner-->
@@ -165,7 +166,7 @@
                 </div>
 
 
-                <div class="sub-post article col-xs-12 col-md-4">
+                <div class="sub-post article col-xs-12 col-sm-6 col-md-4">
 
                   <div id="post4" class="article-preview-container">
                     <!-- the background image conatiner-->
@@ -198,22 +199,34 @@
 
         <section id="sub-articles">
           <div class="sub-articles-background">
-            <div class="sub-articles-container container_12">
+            <div class="sub-articles-container container">
 
-              <div class="stitch-divider grid_12">
-                <img src="img/blank_header.png" alt="" />
-              </div>
-
-              <div id="boss-ladies" class="sub-article grid_6">
-                <div class="sub-article-header">
-                  <img src="img/boss_ladies.png" alt="Boss Ladies" />
+              <div class="row">
+                <div class="stitch-divider col-xs-12">
+                  <img src="img/blank_header.png" alt="" />
                 </div>
               </div>
 
-              <div id="reading-list" class="sub-article grid_6">
-                <div class="sub-article-header">
-                  <img src="img/reading_list.png" alt="Reading List" />
+
+
+              <div class="row">
+
+                <div class="col-xs-12 col-md-6">
+                  <div id="boss-ladies" class="sub-article">
+                    <div class="sub-article-header">
+                      <img src="img/boss_ladies.png" alt="Boss Ladies" />
+                    </div>
+                  </div>
                 </div>
+
+                <div class="col-xs-12 col-md-6">
+                  <div id="reading-list" class="sub-article">
+                    <div class="sub-article-header">
+                      <img src="img/reading_list.png" alt="Reading List" />
+                    </div>
+                  </div>
+                </div>
+
               </div>
 
             </div>
