--- a/index.html
+++ b/index.html
@@ -242,77 +242,115 @@
 
         <section id="video">
           <div class="video-background">
-            <div class="video-container container_12">
+            <div class="video-container container">
 
-              <div class="heading-stitch-divider grid_12">
-                <div class="stitch-heading">
-                  <img src="img/video.png" alt="Video" />
+              <div class="row">
+                <div class="heading-stitch-divider col-xs-12">
+                  <div class="stitch-heading">
+                    <img src="img/video.png" alt="Video" />
+                  </div>
                 </div>
               </div>
 
 
-              <div class="player-container grid_8">
-                <!-- YOUTUBE EMBEDED CODE -->
-                <iframe width="640" height="360" src="https://www.youtube.com/embed/WAu-vTt7kw4?controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+              <div class="row">
+
+                  <div class="video-container col-xs-8 col-lg-7 col-lg-offset-1">
+                    <!-- YOUTUBE EMBEDED CODE -->
+                    <iframe width="640" height="360" src="https://www.youtube.com/embed/WAu-vTt7kw4?controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+                  </div>
+
+                  <div class="video-info-container col-xs-4 col-lg-3">
+
+                    <div class="centering-div">
+
+                      <div class="small-stitch">
+                        <img src="img/cross_stitch_line.png" alt="" />
+                      </div>
+
+                      <div class="padder">
+                        <a href="http://raconteurs.ca/"><img src="img/raconteurs-logo.png" alt="" /></a>
+                      </div>
+
+                      <div class="padder">
+                        <img src="img/bodies.png" alt="BODIES" />
+                      </div>
+
+                      <p>
+                        See more videos<br>at <a href="http://raconteurs.ca/">Raconteur Storytelling</a>
+                      </p>
+
+                      <div class="small-stitch">
+                        <img src="img/cross_stitch_line.png" alt="" />
+                      </div>
+                    </div>
+
+                  </div>
+
               </div>
 
-              <div class="video-info-container grid_4">
-
-                <div class="centering-div">
-                  <img class="small-stitch" src="img/cross_stitch_line.png" alt="" />
-                  <a href="http://raconteurs.ca/"><img class="raconteurs-logo" src="img/raconteurs-logo.png" alt="" /></a>
-                  <img src="img/bodies.png" alt="BODIES" />
-
-                  <p>
-                    See more videos<br>at <a href="http://raconteurs.ca/">Raconteur Storytelling</a>
-                  </p>
-
-                  <img class="small-stitch" src="img/cross_stitch_line.png" alt="" />
-                </div>
-
-              </div>
             </div>
           </div>
         </section>
+
+
+
+        <!-- ******* INSTAGRAM ******** -->
+        <!-- ************************** -->
 
         <section id="instagram">
           <div class="instagram-background">
-            <div class="instagram-container container_12">
+            <div class="instagram-container container">
 
-              <div class="heading-stitch-divider grid_12">
-                <div class="stitch-heading">
-                  <img src="img/instagram.png" alt="Instagram" />
+              <div class="row">
+                <div class="heading-stitch-divider col-xs-12">
+                  <div class="stitch-heading">
+                    <img src="img/instagram.png" alt="Instagram" />
+                  </div>
                 </div>
               </div>
 
-              <div class="instagram-module grid_12">
-                <!-- LightWidget WIDGET --><script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/dc52ea18245e5c8f948fea01c8c9c61d.html" id="lightwidget_dc52ea1824" name="lightwidget_dc52ea1824"  scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
+              <div class="row">
+                <div class="instagram-module col-xs-12">
+                  <!-- LightWidget WIDGET --><script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/dc52ea18245e5c8f948fea01c8c9c61d.html" id="lightwidget_dc52ea1824" name="lightwidget_dc52ea1824"  scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
+                </div>
               </div>
+
             </div>
 
           </div>
         </section>
 
+
+
+        <!-- ******* INSTAGRAM ******** -->
+        <!-- ************************** -->
+
         <section id="site-footer">
           <div class="footer-background">
-            <div class="footer-container container_12">
-              <div class="footer-logo-container grid_12">
-                <div class="footer-banner">
-                  <img src="img/cross_stitch_line.png" alt="" />
-                  <img src="img/cross_stitch_star.png" alt="" />
-                  <img src="img/cross_stitch_line.png" alt="" />
+
+            <div class="footer-container container">
+
+              <div class="row">
+                <div class="footer-logo-container col-xs-12">
+
+                  <div class="footer-banner">
+                    <img src="img/cross_stitch_line.png" alt="" />
+                    <img id="star" src="img/cross_stitch_star.png" alt="" />
+                    <img src="img/cross_stitch_line.png" alt="" />
+                  </div>
+
+                  <div class="footer-slogan">
+                    <img src="img/feminism_fashion_floral.png" alt="" />
+                  </div>
+
+                  <div class="footer-disclaimer">
+                    <img src="img/all_rights_reserved.png" alt="Floral Manifesto 2016 All Rights Reserved" />
+                  </div>
+
                 </div>
-
-                <div class="footer-slogan">
-                  <img src="img/feminism_fashion_floral.png" alt="" />
-                </div>
-
-                <div class="footer-disclaimer">
-                  <img src="img/all_rights_reserved.png" alt="Floral Manifesto 2016 All Rights Reserved" />
-                </div>
-
-
               </div>
+
             </div>
           </div>
         </section>
