added responsivness to iphone 5 view.

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                       </div>
 
                       <div class="padder">
-                        <a href="http://raconteurs.ca/"><img src="img/raconteurs-logo.png" alt="" /></a>
+                        <a href="http://raconteurs.ca/" target="_blank"><img src="img/raconteurs-logo.png" alt="" /></a>
                       </div>
 
                       <div class="padder">
@@ -312,7 +312,7 @@
 
               <div class="row">
                 <div class="instagram-module col-xs-12">
-                  <!-- LightWidget WIDGET --><script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/dc52ea18245e5c8f948fea01c8c9c61d.html" id="lightwidget_dc52ea1824" name="lightwidget_dc52ea1824"  scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
+                  <!-- LightWidget WIDGET --><script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/5e3d9a9bbc5f571ab068aa0727e62fc2.html" id="lightwidget_5e3d9a9bbc" name="lightwidget_5e3d9a9bbc" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
                 </div>
               </div>
 
@@ -323,7 +323,7 @@
 
 
 
-        <!-- ******* INSTAGRAM ******** -->
+        <!-- ******* FOOTER ******** -->
         <!-- ************************** -->
 
         <section id="site-footer">
