--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                       </div>
 
                       <p>
-                        See more videos<br>at <a href="http://raconteurs.ca/">Raconteur Storytelling</a>
+                        See more videos<br>at <a href="http://raconteurs.ca/">Raconteurs Storytelling</a>
                       </p>
 
                       <div class="small-stitch">
