created a new html page for the reading list, and linked it to the index.html.

--- a/index.html
+++ b/index.html
@@ -219,12 +219,15 @@
                   </div>
                 </div>
 
+                <!-- READING LIST -->
                 <div class="col-xs-12 col-md-6">
-                  <div id="reading-list" class="sub-article">
-                    <div class="sub-article-header">
-                      <img src="img/reading_list.png" alt="Reading List" />
+                  <a href="reading_list.html">
+                    <div id="reading-list" class="sub-article">
+                      <div class="sub-article-header">
+                        <img src="img/reading_list.png" alt="Reading List" />
+                      </div>
                     </div>
-                  </div>
+                  </a>
                 </div>
 
               </div>
